[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobhunter-pro"
version = "1.0.0"
description = "CV-Based Job Discovery Application for Multi-Platform Job Search"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = [
    "job-search",
    "cv-parser",
    "job-scraper",
    "career",
    "recruitment"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Repository = "https://github.com/yourusername/jobhunter-pro"
Issues = "https://github.com/yourusername/jobhunter-pro/issues"
